typescript/checker/tests/conformance/parser/ecmascript5/Accessors/parserSetAccessorWithTypeAnnotation1.ts.stderr
error: TS1095 {
    span: Span {
        lo: BytePos(
            33,
        ),
        hi: BytePos(
            36,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/Accessors/parserSetAccessorWithTypeAnnotation1.ts:3:8
  |
3 |    set foo(v): number {
  |        ^^^

